<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dollop.placementadda.activity.ExamInstructionActivity">

    <include layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginLayoutId"
        android:layout_below="@+id/tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                app:cardElevation="@dimen/_2sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/examNameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/exam_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="General Instruction"
                        android:textColor="@color/primary_text"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/general_info"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Timings"
                        android:textColor="@color/primary_text"

                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/timing_info"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Personal Belongings"
                        android:textColor="@color/primary_text"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/personal_belonging_info"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="At the Start of the Examination"
                        android:textColor="@color/primary_text"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/start_examination"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="During Examination"
                        android:textColor="@color/primary_text"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/exam_duration"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="At the End of the Examination"
                        android:textColor="@color/primary_text"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/end_examination"
                        android:textSize="16dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/colorPrimary"
        android:id="@+id/loginLayoutId"
        android:gravity="center">

        <Button
            android:id="@+id/loginBtn"
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:paddingBottom="@dimen/_12sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingRight="@dimen/_40sdp"
            android:paddingTop="@dimen/_12sdp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>
