<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_background"
    android:padding="@dimen/_16sdp"
    android:paddingBottom="@dimen/_8sdp"
    android:paddingLeft="@dimen/_40sdp"
    android:paddingRight="@dimen/_40sdp"
    tools:context="com.dollop.placementadda.activity.basic.SignUpActivity">

    <include
        layout="@layout/tool_bar"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar">

        <LinearLayout
            android:id="@+id/parentSignUpLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_160sdp"
                android:layout_gravity="center"
                android:background="@drawable/new_login_logo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_24sdp">

                <EditText
                    android:id="@+id/etSignUpName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/new_editxt_icon"
                    android:hint="@string/name"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/editxt_username_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:padding="@dimen/text_pading_8"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />


                <EditText
                    android:id="@+id/etSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/new_editxt_icon"
                    android:hint="@string/prompt_email"
                    android:imeActionId="6"
                    android:drawableLeft="@drawable/editxt_email_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:padding="@dimen/text_pading_8"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />

                <EditText
                    android:id="@+id/etSignUpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/new_editxt_icon"
                    android:hint="@string/contact"
                    android:maxLength="10"
                    android:imeActionId="6"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:padding="@dimen/text_pading_8"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:drawableLeft="@drawable/editxt_call_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center">

                <Button
                    android:id="@+id/signUpBtn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/new_signup_btn"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_40sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="@string/signup"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
