<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="#FFCCCCCC"
        app:cardCornerRadius="@dimen/text_margin_4"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/more_coin"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/get_spin"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/ic_coins_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:inputType="number"
                android:text="100"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_large"
                android:visibility="gone" />


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/selected_position_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_normal" />

                <com.dollop.placementadda.library.LuckyWheelView
                    android:id="@+id/luckyWheel"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_centerInParent="true"
                    app:lkwBackgroundColor="#FF9800"
                    app:lkwCenterImage="@drawable/wheel"
                    app:lkwCursor="@drawable/ic_cursor"
                    app:lkwTextColor="#263238" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_margin_8">

                <Button
                    android:id="@+id/btnGetCoin"
                    style="@style/Base.V7.Widget.AppCompat.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_40sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:text="@string/Get"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_margin="@dimen/_2sdp"
            android:src="@drawable/ic_close_btns" />
    </android.support.v7.widget.CardView>

</RelativeLayout>

